--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     PIGEONS OR TREATS?
   </div>
   <div class="intro">
-    Click on the these Manhattan pigeons.
+    Click on these Manhattan pigeons.
     <br>
     You might find out more about them.
     <br>
